[gd_scene load_steps=9 format=3 uid="uid://2qjyj0duj1d1"]

[ext_resource type="Script" uid="uid://bhe5tpfy88yqc" path="res://overlays/Inventory/Inventory.gd" id="1_4xbkb"]
[ext_resource type="PackedScene" uid="uid://qe5s4vu031h" path="res://effects/SphereMap/SphereMap.tscn" id="1_r641l"]
[ext_resource type="Shader" uid="uid://byaapyq2twjty" path="res://effects/SphereMap/Mat_SphereMap.gdshader" id="2_oyhrs"]
[ext_resource type="Texture2D" uid="uid://cxuhdlfuiupug" path="res://overlays/Inventory/InventoryIcons.png" id="4_uc287"]
[ext_resource type="AudioStream" uid="uid://bd2frn1nekn65" path="res://overlays/Inventory/618642__suckmadeck__distorted-door-slam-3.wav" id="5_x2lww"]
[ext_resource type="AudioStream" uid="uid://4gwkns63474o" path="res://overlays/Inventory/618642__suckmadeck__distorted-door-slam-3_inverted_3.wav" id="6_dbel6"]
[ext_resource type="AudioStream" uid="uid://cshbgom5r51su" path="res://overlays/Inventory/618642__suckmadeck__distorted-door-slam-3_cursor.wav" id="7_lljt4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bppld"]
resource_local_to_scene = true
shader = ExtResource("2_oyhrs")
shader_parameter/distortion = 1.0
shader_parameter/radius = 1.0
shader_parameter/use_tex_alpha = true
shader_parameter/alpha = 1.0
shader_parameter/crop = 1.0
shader_parameter/shade = false

[node name="Inventory" type="Node2D"]
z_index = 3
texture_filter = 1
texture_repeat = 1
script = ExtResource("1_4xbkb")

[node name="SphereMap" parent="." instance=ExtResource("1_r641l")]
material = SubResource("ShaderMaterial_bppld")
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
offset = Vector2(16, 16)
zoom = Vector2(3, 3)

[node name="Cursor" type="Sprite2D" parent="SubViewport"]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("4_uc287")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="sndOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x2lww")
volume_db = -5.0
bus = &"SoundEffects"

[node name="sndClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dbel6")
volume_db = -4.0
bus = &"SoundEffects"

[node name="sndCursorMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lljt4")
volume_db = -5.0
bus = &"SoundEffects"
